src/pages/index.module.scss
/* stylelint-disable docusaurus/copyright-header */

/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 1rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
  // color: var(--ifm-font-color-base);
  color: #E3E3E3;
}

@media only screen and (max-width: 996px) {
  .heroBanner {
    display: flex;
    flex-direction: column;
  }

  .headerborder {
    margin-right: 7vw;
    margin-left: 7vw;
    box-shadow: 0 0 50px black;
    border-radius: 20px;
  }

  .signingradientborder {
    margin: auto;
  }

  .gradientborder {
    margin: auto;
  }
}

.buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

@mixin content {
  padding: 60px 0;
  font-size: 1.3rem;
  justify-content: center;
  line-height: 40px;
}

.contentlogin {
  @include content;
}

.contentsignup {
  @include content;

  background-color: var(--ifm-color-emphasis-100);
}

.contentforget {
  @include content;
}

.headerborder {
  display: flex;
  transform: scale(0.85);
  margin-right: 14vw;
  box-shadow: 0 0 50px black;
  border-radius: 20px;
}

.gradientborder {
  display: flex;
  transform: scale(0.85);
  box-shadow: 0 0 50px grey;
  border-radius: 20px;
}

/* Workflow explain gif layout here */
.explain {
  padding: 20px 20px 0;
  font-size: 1.3rem;
  justify-content: center;
  line-height: 40px;
  background-color: var(--ifm-color-emphasis-100);
}

.explaingif {
  padding: 20px;
  font-size: 1.3rem;
  justify-content: center;
  line-height: 20px;
}

.explaintext {
  padding: 60px 0;
}

